fixed practice button z-index

--- a/client/src/components/experiment/practice.css
+++ b/client/src/components/experiment/practice.css
@@ -3,4 +3,6 @@
   top: 2vh;
   display: none;
   height: 60px !important;
+  /* needs to be in front of background */
+  z-index: 1;
 }
